--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
 		"prettier",
 		"plugin:prettier/recommended"
 	],
+	"ignorePatterns": ["demos/", "node_modules/"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
