--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "mini-react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
-    "build:dev": "rimraf dist && rollup --bundleConfigAsCjs -c scripts/rollup/dev.config.js",
-    "demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@commitlint/cli": "17.1.2",
-    "@commitlint/config-conventional": "17.1.0",
-    "@rollup/plugin-alias": "^5.1.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-replace": "5.0.1",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "5.40.0",
-    "@typescript-eslint/parser": "5.40.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "commitlint": "17.1.2",
-    "eslint": "8.25.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "husky": "^9.0.11",
-    "prettier": "2.7.1",
-    "rimraf": "^5.0.5",
-    "rollup": "3.1.0",
-    "rollup-plugin-generate-package-json": "^3.2.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "4.9.5",
-    "vite": "^5.1.4"
-  }
+	"name": "mini-react",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
+		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs -c scripts/rollup/dev.config.js",
+		"demo": "vite serve demos/test-1 --config scripts/vite/vite.config.js --force"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@commitlint/cli": "17.1.2",
+		"@commitlint/config-conventional": "17.1.0",
+		"@rollup/plugin-alias": "^5.1.0",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-replace": "5.0.1",
+		"@types/react": "18.2.56",
+		"@types/react-dom": "18.2.19",
+		"@typescript-eslint/eslint-plugin": "5.40.0",
+		"@typescript-eslint/parser": "5.40.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"commitlint": "17.1.2",
+		"eslint": "8.25.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-prettier": "4.2.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"husky": "^9.0.11",
+		"prettier": "2.7.1",
+		"rimraf": "^5.0.5",
+		"rollup": "3.1.0",
+		"rollup-plugin-generate-package-json": "^3.2.0",
+		"rollup-plugin-typescript2": "^0.36.0",
+		"typescript": "4.9.5",
+		"vite": "^5.1.4"
+	}
 }
