--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
 		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs -c scripts/rollup/dev.config.js",
-		"demo": "vite serve demos/test-1 --config scripts/vite/vite.config.js --force"
+		"demo": "vite serve demos/test-fc-state --config scripts/vite/vite.config.js --force"
 	},
 	"keywords": [],
 	"author": "",
