--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
+		"format": "prettier --write .",
 		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs -c scripts/rollup/dev.config.js",
-		"demo": "vite serve demos/test-fc-state --config scripts/vite/vite.config.js --force"
+		"demo": "vite serve demos/test-fc-state --config scripts/vite/vite.config.js --force",
+		"test": "jest --config scripts/jest/jest.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -35,6 +37,12 @@
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "4.9.5",
-		"vite": "^5.1.4"
+		"vite": "^5.1.4",
+		"jest": "29.3.1",
+		"jest-config": "29.3.1",
+		"jest-environment-jsdom": "29.3.1",
+		"@babel/core": "7.26.10",
+		"@babel/plugin-transform-react-jsx": "7.25.9",
+		"@babel/preset-env": "7.26.9"
 	}
 }
